--- a/config/rbac/recontest_editor_role.yaml
+++ b/config/rbac/recontest_editor_role.yaml
@@ -2,17 +2,10 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  labels:
-    app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/instance: recontest-editor-role
-    app.kubernetes.io/component: rbac
-    app.kubernetes.io/created-by: recon-test-operator
-    app.kubernetes.io/part-of: recon-test-operator
-    app.kubernetes.io/managed-by: kustomize
   name: recontest-editor-role
 rules:
 - apiGroups:
-  - app.anirudh.io
+  - example.anirudh.io
   resources:
   - recontests
   verbs:
@@ -24,7 +17,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - app.anirudh.io
+  - example.anirudh.io
   resources:
   - recontests/status
   verbs:
