--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -2,10 +2,11 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
+  creationTimestamp: null
   name: manager-role
 rules:
 - apiGroups:
-  - app.anirudh.io
+  - example.anirudh.io
   resources:
   - recontests
   verbs:
@@ -17,13 +18,13 @@ rules:
   - update
   - watch
 - apiGroups:
-  - app.anirudh.io
+  - example.anirudh.io
   resources:
   - recontests/finalizers
   verbs:
   - update
 - apiGroups:
-  - app.anirudh.io
+  - example.anirudh.io
   resources:
   - recontests/status
   verbs:
