--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,4 @@
-## Append samples of your project ##
+## Append samples you want in your CSV to this file as resources ##
 resources:
-- app_v1alpha1_recontest.yaml
+- example_v1alpha1_recontest.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
