--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -38,7 +38,7 @@ spec:
         - /manager
         args:
         - --leader-elect
-        image: controller:latest
+        image: quay.io/rh-ee-aagnihot/recon-test-operator:v0.1
         name: manager
         securityContext:
           allowPrivilegeEscalation: false
